--- a/gcart.html
+++ b/gcart.html
@@ -5,84 +5,257 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Cart — ChatPoint</title>
     <style>
+        :root {
+            --primary: #2563eb; /* Modern blue for a fresh professional look */
+            --primary-dark: #1d4ed8;
+            --success: #10b981;
+            --danger: #ef4444;
+            --warning: #f59e0b;
+            --bg: #f8fafc;
+            --card-bg: #ffffff;
+            --text: #1e293b;
+            --text-light: #64748b;
+            --border: #e2e8f0;
+            --shadow-sm: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
+            --shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1);
+            --radius: 12px;
+        }
+
         body {
-            font-family: Arial, sans-serif;
-            background:#f8f8f8;
-            margin:0;
-            padding:0;
+            font-family: system-ui, -apple-system, 'Segoe UI', Arial, sans-serif;
+            background: var(--bg);
+            margin: 0;
+            padding: 0;
+            color: var(--text);
+            line-height: 1.5;
         }
+
         .header {
-            position:sticky; top:0; background:white; padding:15px;
-            box-shadow:0 2px 10px rgba(0,0,0,0.1); display:flex; align-items:center; gap:15px; z-index:10;
+            position: sticky;
+            top: 0;
+            background: var(--card-bg);
+            padding: 16px 20px;
+            box-shadow: var(--shadow-sm);
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            z-index: 10;
         }
-        .back { font-size:28px; cursor:pointer; color:#4CAF50; }
-        .title { font-size:20px; font-weight:bold; flex:1; }
-        .container { padding:20px; max-width:600px; margin:0 auto; }
-        .cart-items { display:grid; gap:16px; margin-bottom:20px; }
+
+        .back {
+            font-size: 32px;
+            cursor: pointer;
+            color: var(--primary);
+            font-weight: 300;
+        }
+
+        .title {
+            font-size: 22px;
+            font-weight: 600;
+            flex: 1;
+        }
+
+        .container {
+            padding: 24px 16px;
+            max-width: 640px;
+            margin: 0 auto;
+        }
+
+        .cart-items {
+            display: grid;
+            gap: 20px;
+            margin-bottom: 32px;
+        }
+
         .cart-item {
-            background:white; border-radius:12px; padding:16px;
-            display:flex; align-items:center; gap:16px;
-            box-shadow:0 4px 10px rgba(0,0,0,0.08);
+            background: var(--card-bg);
+            border-radius: var(--radius);
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            box-shadow: var(--shadow-sm);
+            transition: box-shadow 0.3s;
         }
+
+        .cart-item:hover {
+            box-shadow: var(--shadow);
+        }
+
         .cart-item img {
-            width:80px; height:80px; object-fit:cover; border-radius:10px;
+            width: 90px;
+            height: 90px;
+            object-fit: cover;
+            border-radius: var(--radius);
+            background: #f1f5f9;
         }
-        .item-details { flex:1; }
-        .item-name { font-weight:600; font-size:16px; margin-bottom:4px; }
-        .item-price { color:#4CAF50; font-weight:bold; font-size:16px; }
+
+        .item-details {
+            flex: 1;
+        }
+
+        .item-name {
+            font-weight: 600;
+            font-size: 18px;
+            margin-bottom: 6px;
+            color: var(--text);
+        }
+
+        .item-price {
+            color: var(--primary);
+            font-weight: bold;
+            font-size: 17px;
+        }
+
         .quantity-controls {
-            display:flex; align-items:center; gap:12px; margin-top:8px;
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            margin-top: 12px;
         }
+
         .qty-btn {
-            width:32px; height:32px; background:#eee; border:none;
-            border-radius:50%; font-size:18px; cursor:pointer;
+            width: 40px;
+            height: 40px;
+            background: #f1f5f9;
+            border: none;
+            border-radius: 50%;
+            font-size: 20px;
+            font-weight: bold;
+            cursor: pointer;
+            color: var(--text);
+            transition: background 0.2s;
         }
-        .qty-btn:hover { background:#ddd; }
-        .quantity { font-size:16px; min-width:30px; text-align:center; }
+
+        .qty-btn:hover {
+            background: #e2e8f0;
+        }
+
+        .qty-btn:active {
+            transform: scale(0.95);
+        }
+
+        .quantity {
+            font-size: 18px;
+            font-weight: 600;
+            min-width: 40px;
+            text-align: center;
+        }
+
         .remove-btn {
-            color:#f44336; font-size:20px; cursor:pointer;
+            color: var(--danger);
+            font-size: 28px;
+            cursor: pointer;
+            font-weight: 300;
         }
+
         .total-section {
-            background:white; padding:20px; border-radius:12px;
-            box-shadow:0 4px 10px rgba(0,0,0,0.08); margin-bottom:20px;
+            background: var(--card-bg);
+            padding: 24px;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow-sm);
+            margin-bottom: 32px;
         }
+
         .total-row {
-            display:flex; justify-content:space-between; font-size:16px; margin-bottom:12px;
+            display: flex;
+            justify-content: space-between;
+            font-size: 17px;
+            margin-bottom: 16px;
         }
+
         .grand-total {
-            font-size:20px; font-weight:bold; color:#4CAF50;
+            font-size: 22px;
+            font-weight: bold;
+            color: var(--primary);
+            padding-top: 12px;
+            border-top: 2px solid var(--border);
         }
-        .checkout-form {
-            background:white; padding:20px; border-radius:12px;
-            box-shadow:0 4px 10px rgba(0,0,0,0.08);
-        }
-        .checkout-form input, .checkout-form textarea {
-            width:100%; padding:14px; margin:10px 0; border:1px solid #ddd; border-radius:8px; font-size:16px;
-        }
-        .checkout-btn {
-            width:100%; background:#4CAF50; color:white; border:none;
-            padding:16px; font-size:18px; font-weight:bold; border-radius:12px;
-            cursor:pointer; box-shadow:0 4px 15px rgba(76,175,80,0.3);
-            margin-top:10px;
-        }
-        .checkout-btn:hover { background:#43a047; }
-        .checkout-btn:disabled {
-            background:#aaa; cursor:not-allowed; box-shadow:none;
-        }
+
         .min-order-note {
-            font-size:14px; color:#e74c3c; text-align:center; margin:10px 0;
+            font-size: 15px;
+            color: var(--danger);
+            text-align: center;
+            margin: 16px 0 8px;
+            font-weight: 500;
         }
-        .empty-cart {
-            text-align:center; padding:60px 20px; color:#888; font-size:18px;
+
+        .checkout-form {
+            background: var(--card-bg);
+            padding: 24px;
+            border-radius: var(--radius);
+            box-shadow: var(--shadow-sm);
         }
-        .empty-cart a {
-            color:#4CAF50; text-decoration:none; font-weight:bold;
+
+        .checkout-form input,
+        .checkout-form textarea {
+            width: 100%;
+            padding: 16px;
+            margin: 12px 0;
+            border: 1px solid var(--border);
+            border-radius: var(--radius);
+            font-size: 16px;
+            box-sizing: border-box;
+            transition: border-color 0.3s, box-shadow 0.3s;
         }
+
+        .checkout-form input:focus,
+        .checkout-form textarea:focus {
+            outline: none;
+            border-color: var(--primary);
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.15);
+        }
+
+        .checkout-btn {
+            width: 100%;
+            background: var(--primary);
+            color: white;
+            border: none;
+            padding: 18px;
+            font-size: 18px;
+            font-weight: 600;
+            border-radius: var(--radius);
+            cursor: pointer;
+            margin-top: 16px;
+            box-shadow: 0 8px 20px rgba(37, 99, 235, 0.25);
+            transition: all 0.3s;
+        }
+
+        .checkout-btn:hover {
+            background: var(--primary-dark);
+            transform: translateY(-2px);
+        }
+
+        .checkout-btn:active {
+            transform: translateY(0);
+        }
+
+        .checkout-btn:disabled {
+            background: #94a3b8;
+            cursor: not-allowed;
+            box-shadow: none;
+            transform: none;
+        }
+
+        .empty-cart,
         .login-required {
-            text-align:center; padding:60px 20px; color:#e74c3c; font-size:18px;
+            text-align: center;
+            padding: 80px 20px;
+            color: var(--text-light);
+            font-size: 19px;
         }
+
+        .empty-cart a,
         .login-required a {
-            color:#4CAF50; text-decoration:none; font-weight:bold;
+            color: var(--primary);
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 18px;
+        }
+
+        .empty-cart a:hover,
+        .login-required a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -91,6 +264,7 @@
         <div class="back" onclick="history.back()">←</div>
         <div class="title">My Cart</div>
     </div>
+
     <div class="container">
         <!-- Login Required -->
         <div id="loginRequired" class="login-required" style="display:none;">
@@ -120,6 +294,7 @@
                     <span>Grand Total</span>
                     <span id="grandTotal">₹0</span>
                 </div>
+
                 <div class="min-order-note" id="minOrderNote">
                     Add more items to reach minimum order
                 </div>
@@ -128,7 +303,7 @@
                 <div class="checkout-form">
                     <input type="text" id="name" placeholder="Your Full Name" required>
                     <input type="tel" id="phone" placeholder="Phone Number" required>
-                    <textarea id="address" placeholder="Full Delivery Address" rows="3" required></textarea>
+                    <textarea id="address" placeholder="Full Delivery Address (with landmark)" rows="4" required></textarea>
                     <button class="checkout-btn" id="checkoutBtn" onclick="placeOrder()" disabled>
                         Place Order
                     </button>
@@ -146,7 +321,7 @@
             document.getElementById('cartContent').style.display = 'none';
             document.getElementById('loginRequired').style.display = 'block';
         } else {
-            // Pre-fill name and phone
+            // Pre-fill name and phone if available
             document.getElementById('name').value = user.name || '';
             document.getElementById('phone').value = user.phone || '';
             renderCart();
@@ -168,7 +343,7 @@
 
             cartItemsDiv.innerHTML = cart.map((item, index) => `
                 <div class="cart-item">
-                    <img src="${item.img}" alt="${item.name}" onerror="this.src='https://via.placeholder.com/80?text=No+Image'">
+                    <img src="${item.img}" alt="${item.name}" onerror="this.src='https://via.placeholder.com/90?text=No+Image'">
                     <div class="item-details">
                         <div class="item-name">${item.name}</div>
                         <div class="item-price">₹${item.price} each</div>
@@ -195,7 +370,7 @@
         }
 
         function removeItem(index) {
-            if (confirm("Remove this item?")) {
+            if (confirm("Remove this item from cart?")) {
                 cart.splice(index, 1);
                 localStorage.setItem('cart', JSON.stringify(cart));
                 renderCart();
@@ -220,28 +395,26 @@
             } else {
                 checkoutBtn.disabled = true;
                 minOrderNote.style.display = 'block';
-                minOrderNote.textContent = `Add ₹${MIN_ORDER - subtotal} more to reach minimum ₹${MIN_ORDER}`;
+                minOrderNote.textContent = `Add ₹${MIN_ORDER - subtotal} more to reach minimum order of ₹${MIN_ORDER}`;
             }
         }
 
-        // CRITICAL: Place order with userId
         async function placeOrder() {
             const name = document.getElementById('name').value.trim();
             const phone = document.getElementById('phone').value.trim();
             const address = document.getElementById('address').value.trim();
 
             if (!name || !phone || !address) {
-                alert("Please fill all fields");
+                alert("Please fill in all the details");
                 return;
             }
 
             const subtotal = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
             if (subtotal < MIN_ORDER) {
-                alert(`Minimum order is ₹${MIN_ORDER}`);
+                alert(`Minimum order amount is ₹${MIN_ORDER}`);
                 return;
             }
 
-            // Build cart structure for server
             const cartObj = { "ChatPoint": {} };
             cart.forEach(item => {
                 cartObj["ChatPoint"][item.name] = {
@@ -256,8 +429,6 @@
                 address1: address,
                 grandTotal: subtotal + Math.round(subtotal * 0.10),
                 cart: cartObj,
-
-                // THIS IS THE FIX — sends userId so tracking works
                 userId: user ? user._id : null,
                 customer_name: user ? user.name : name,
                 customer_phone: user ? user.phone : phone
@@ -273,17 +444,17 @@
                 const data = await res.json();
 
                 if (data.success) {
-                    alert("Order placed successfully!");
+                    alert("Order placed successfully! 🎉");
                     localStorage.removeItem('cart');
                     cart = [];
                     renderCart();
                     window.location.href = 'tracking.html';
                 } else {
-                    alert("Order failed: " + (data.message || "Try again"));
+                    alert("Order failed: " + (data.message || "Please try again"));
                 }
             } catch (err) {
                 console.error(err);
-                alert("Network error. Check connection.");
+                alert("Network error. Please check your connection.");
             }
         }
     </script>
